# DiagDoctor

./: .env.example  .gitignore  Makefile  README.md  diagdoctor-execution-handbook.md  diagdoctor-from-scratch.md  docker-compose.yml  pyproject.toml
benchmark/: pyproject.toml
benchmark/cases/: BE-001.yaml  BE-003.yaml  BE-020.yaml  BE-021.yaml  BE-022.yaml  CONFIG-001.yaml  DATA-001.yaml  DATA-002.yaml  FE-001.yaml  FE-002.yaml  FE-020.yaml  FE-021.yaml  LOGIC-001.yaml  LOGIC-002.yaml  LOGIC-003.yaml  LOGIC-020.yaml  LOGIC-021.yaml  LOGIC-022.yaml  PERF-001.yaml  PERF-003.yaml  PERF-020.yaml  PERF-021.yaml
benchmark/src/: __init__.py  runner.py  schema.py
benchmark/src/benchmark/: __init__.py  cli.py  loader.py  runner.py  schema.py
benchmark/src/benchmark/evaluators/: __init__.py  base.py  efficiency.py  exact_match.py  keyword_match.py  llm_judge.py
benchmark/src/benchmark/reporters/: __init__.py  html.py  markdown.py
benchmark/src/evaluators/: __init__.py  base.py  efficiency.py  exact_match.py  keyword_match.py
bug-factory/: pyproject.toml
bug-factory/output/BE-001/evidence/: logs.json  traces.json
bug-factory/output/BE-020/: case.yaml
bug-factory/output/BE-020/evidence/: logs.json  traces.json
bug-factory/output/BE-021/: case.yaml
bug-factory/output/BE-021/evidence/: browser_errors.json  logs.json  traces.json
bug-factory/output/BE-022/: case.yaml
bug-factory/output/BE-022/evidence/: browser_errors.json  logs.json  traces.json
bug-factory/output/CASCADE-020/: case.yaml
bug-factory/output/CASCADE-020/evidence/: browser_errors.json  logs.json  traces.json
bug-factory/output/CONFIG-020/: case.yaml
bug-factory/output/CONFIG-020/evidence/: browser_errors.json  logs.json  traces.json
bug-factory/output/DATA-020/: case.yaml
bug-factory/output/DATA-020/evidence/: logs.json  traces.json
bug-factory/output/DATA-021/: case.yaml
bug-factory/output/DATA-021/evidence/: logs.json  traces.json
bug-factory/output/FE-020/: case.yaml
bug-factory/output/FE-020/evidence/: browser_errors.json  (+2 more)
bug-factory/output/FE-021/: case.yaml
bug-factory/output/LOGIC-020/: case.yaml
bug-factory/output/LOGIC-021/: case.yaml
bug-factory/output/LOGIC-022/: case.yaml
bug-factory/output/PERF-020/: case.yaml
bug-factory/output/PERF-021/: case.yaml
bug-factory/output/RACE-020/: case.yaml
bug-factory/recipes/: .gitkeep  be_001_n_plus_1.yaml  be_002_validation_bypass.yaml  be_003_jwt_expiry.yaml  config_001_cors_mismatch.yaml  data_001_encoding_error.yaml  data_002_float_precision.yaml  fe_001_null_assignee.yaml  fe_002_uncaught_promise.yaml  fe_003_state_chaos.yaml  logic_001_authz_bypass.yaml  logic_002_race_condition.yaml  logic_003_timezone_error.yaml  perf_001_missing_index.yaml  perf_002_cache_penetration.yaml  perf_003_polling_loop.yaml
bug-factory/recipes/gold/: be_020_fk_integrity_error.yaml  be_021_scalar_one_500.yaml  be_022_null_assignee_attribute_error.yaml  cascade_020_retry_storm.yaml  config_020_jwt_expiry_zero.yaml  data_020_wrong_sort_order.yaml  data_021_due_date_dropped.yaml  fe_020_undefined_tags_crash.yaml  fe_021_null_assignee_crash.yaml  logic_020_get_project_idor.yaml  logic_021_list_projects_leak.yaml  logic_022_status_slient_drop.yaml  perf_020_n_plus_1_tasks.yaml  perf_021_n_plus_1_projects.yaml  race_020_concurrent_update.yaml
bug-factory/src/bug_factory/: __init__.py  ai_rewriter.py  case_generator.py  cli.py  evidence_collector.py  git_manager.py  injector.py  schema.py  trigger.py
bug-factory/tests/: test_trigger.py
demo-app/backend/: .env  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
demo-app/backend/alembic/: env.py  script.py.mako
demo-app/backend/app/: config.py  database.py  main.py  observability.py
demo-app/backend/scripts/: seed.py
demo-app/backend/taskflow_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
doctor/: .coverage  .env.example  Dockerfile  debug_case.py  debug_langfuse_api.py  debug_langfuse_api2.py  debug_langfuse_api3.py  debug_triage_be001.py  pyproject.toml  test_anomaly_detection.py
doctor/scripts/: import_cases_to_langfuse.py  init_kb.py  langfuse_scorers.py  run_baseline_experiment.py
doctor/seed_data/: initial_knowledge.yaml
doctor/src/: __init__.py  config.py  llm_factory.py  main.py
doctor/src/api/: __init__.py  diagnose.py  health.py
doctor/src/graph/: __init__.py  context_engine.py  exceptions.py  main_graph.py  state.py
doctor/src/ingest/: __init__.py  correlator.py  deduplicator.py  denoiser.py  normalizer.py  signal_extractor.py  tier_aware.py
doctor/src/knowledge/: __init__.py  embeddings.py  hybrid_service.py  struct_kb.py  vector_kb.py
doctor/src/observability/: __init__.py  cost.py  langfuse_tracing.py  logger.py  tracing.py
doctor/src/prompts/: __init__.py  registry.py
doctor/src/security/: __init__.py  sanitizer.py  secrets.py  sql_guard.py
doctor/src/tools/: __init__.py  code_search.py  db_query.py  file_reader.py  frontend_inspect.py  frontend_tools.py  observability_tools.py  observability_unified.py  source_map_resolve.py  trace_query.py
doctor/tests/: __init__.py  test_backend_specialist.py  test_context_engine.py  test_cost.py  test_embeddings.py  test_file_reader.py  test_frontend_inspect.py  test_hybrid_service.py  test_logger.py  test_observability_tools.py  test_observability_unified.py  test_sanitizer.py  test_secrets.py  test_span_n1_detection.py  test_sql_guard.py  test_struct_kb.py  test_trace_query.py  test_tracing.py  test_triage_node.py  test_vector_kb.py
doctor/tests/graph/: _test_unified_agent_budget.py  test_unified_agent.py
doctor/tests/integration/: __init__.py  test_smoke.py
(+121 files in other folders)
