[project]
name = "benchmark"
version = "0.1.0"
description = "DiagDoctor Benchmark — Evaluation case definitions and scoring"
requires-python = ">=3.11"
dependencies = [
    "bug-factory",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "structlog>=24.4.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "jinja2>=3.1.0",
]

[project.scripts]
diagdoctor-bench = "benchmark.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark"]

[tool.uv.sources]
bug-factory = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
