[project]
name = "bug-factory"
version = "0.1.0"
description = "Bug Factory — Bug generation and injection for DiagDoctor"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
